--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ hs_err_pid*
 /Week2/nbproject/private/
 /Project1/nbproject/private/
 /Project0/nbproject/private/
+/PHPDatabaseProject/nbproject/private/
