--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@ hs_err_pid*
 /Project1/nbproject/private/
 /Project0/nbproject/private/
 /PHPDatabaseProject/nbproject/private/
+/Arrays/nbproject/private/
