--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ hs_err_pid*
 /Project0/nbproject/private/
 /PHPDatabaseProject/nbproject/private/
 /Arrays/nbproject/private/
+/Functions/nbproject/private/
