hello world with Java Servlets

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,5 @@ hs_err_pid*
 /PHPDatabaseProject/nbproject/private/
 /Arrays/nbproject/private/
 /Functions/nbproject/private/
+/HelloWorld/nbproject/private/
+/HelloWorld/build/
