--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,6 @@ hs_err_pid*
 /Functions/nbproject/private/
 /HelloWorld/nbproject/private/
 /HelloWorld/build/
+/Stocks/nbproject/private/
+/Stocks/build/
+
